tests/lean/eagerUnfoldingIssue.lean.expected.out
eagerUnfoldingIssue.lean:6:2-6:17: error: failed to synthesize
  MonadLog (StateM Nat)
use `set_option diagnostics true` to get diagnostic information
eagerUnfoldingIssue.lean:12:2-12:17: error: failed to synthesize
  MonadLog (StateM Nat)
use `set_option diagnostics true` to get diagnostic information
